// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInlineEditForm Edit Mode editModeProps.cancelButtonProps 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="inlineEdit_generated-id"
                aria-label="Edit inline"
                class="euiFieldText euiFieldText--fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Uh no. Do not save."
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-disabled"
            data-test-subj="euiInlineEditModeCancelButton"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm Edit Mode editModeProps.formRowProps 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        data-test-subj="customErrorText"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="inlineEdit_generated-id"
                aria-label="Edit inline"
                class="euiFieldText euiFieldText--fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm Edit Mode editModeProps.inputProps 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <label
              class="euiFormLabel euiFormControlLayout__prepend"
              for="generated-id"
            >
              Prepend Example
            </label>
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="inlineEdit_generated-id"
                aria-label="Edit inline"
                class="euiFieldText euiFieldText--fullWidth euiFieldText--inGroup"
                data-test-subj="customInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm Edit Mode editModeProps.saveButtonProps 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="inlineEdit_generated-id"
                aria-label="Edit inline"
                class="euiFieldText euiFieldText--fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Yes! Let's save."
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-primary"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm Edit Mode isInvalid 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="inlineEdit_generated-id"
                aria-invalid="true"
                aria-label="Edit inline"
                class="euiFieldText euiFormControlLayout--1icons euiFieldText--fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
              >
                <span
                  color="danger"
                  data-euiicon-type="warning"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm Edit Mode isLoading 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="inlineEdit_generated-id"
                aria-label="Edit inline"
                class="euiFieldText euiFormControlLayout--1icons euiFieldText--fullWidth euiFieldText-isLoading"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
              >
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                  role="progressbar"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="true"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="emotion-euiScreenReaderOnly"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            role="status"
          >
            Loading 
          </div>
          <div
            aria-atomic="true"
            aria-hidden="true"
            aria-live="off"
            role="status"
          />
        </div>
        <div
          aria-label="Loading "
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
          role="progressbar"
        >
          <div
            aria-busy="true"
            data-test-subj="euiSkeletonLoadingAriaWrapper"
          >
            <div
              aria-label="Loading "
              class="euiSkeletonRectangle emotion-euiSkeletonGradientAnimation-euiSkeletonRectangle-m"
              role="progressbar"
              style="inline-size: 40px; block-size: 40px;"
            />
          </div>
          <div
            aria-busy="true"
            data-test-subj="euiSkeletonLoadingAriaWrapper"
          >
            <div
              aria-label="Loading "
              class="euiSkeletonRectangle emotion-euiSkeletonGradientAnimation-euiSkeletonRectangle-m"
              role="progressbar"
              style="inline-size: 40px; block-size: 40px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm Edit Mode renders 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="inlineEdit_generated-id"
                aria-label="Edit inline"
                class="euiFieldText euiFieldText--fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm Read Mode isReadOnly 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-19hs4ci-empty-disabled-euiInlineEditButton-isReadOnly"
    data-test-subj="euiInlineReadModeButton"
    disabled=""
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonEmpty__text"
      >
        Hello World!
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  />
</div>
`;

exports[`EuiInlineEditForm Read Mode readModeProps 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-ioyorl-empty-primary-euiInlineEditButton"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        Hello World!
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditForm Read Mode renders 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-gj4z04-empty-text-euiInlineEditButton"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        Hello World!
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditForm Read Mode sizes 1`] = `
<div
  class="euiInlineEdit testClass1 testClass2"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushBoth css-gj4z04-empty-text-euiInlineEditButton"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        Hello World!
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;
